--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -51,6 +51,8 @@ CONFIG_MSM_APP_SETTINGS=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=4
 CONFIG_PREEMPT=y
+CONFIG_TRANSPARENT_HUGEPAGE=n
+CONFIG_HZ_100=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
