--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -636,12 +636,6 @@ config MSM_BCL_PERIPHERAL_CTL
 	  provides routines to configure and monitor the BCL
 	  PMIC peripheral.
 
-config MSM_BCL_SOMC_CTL
-	bool "BCL driver to control with new condition"
-	depends on BATTERY_BCL
-	help
-	  Say Y here to enable new condition.
-
 config FAST_CHARGE
        bool "Enable Fast Charge"
        depends on QPNP_SMBCHARGER
@@ -652,7 +646,7 @@ config FAST_CHARGE
 
 config QNS_SYSTEM
 	bool "Qnovo QNS wrapper implementation"
-	default n
+	default y
 	help
 	  Say Y here to enable support for QNS system.
 	  QNS is a battery charging controller and it necessary to access a
