--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -85,6 +85,8 @@ CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=64
 CONFIG_INPUT_BOOST_FREQ_LP=844800
 CONFIG_INPUT_BOOST_FREQ_PERF=556800
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
