some tweaks for defconfig

--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -658,6 +658,8 @@ CONFIG_TRANSPARENT_HUGEPAGE=n
 
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_THERMAL_MONITOR_SIMPLE=y
+CONFIG_THERMAL_MONITOR=y
+
 CONFIG_SOUND_CONTROL=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
@@ -687,5 +689,10 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
+
+CONFIG_ASMP=y
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_INTELLI_THERMAL=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 
