defconfig: disable wireguard
Also disables KSM and THP
This reverts commit a2b28ebfddca158053726c9d02824469e254c992.

--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -638,10 +638,9 @@ CONFIG_AiO_HotPlug=y
 
 CONFIG_DYNAMIC_FSYNC=y
 
-CONFIG_WIREGUARD=y
-
 CONFIG_BOEFFLA_WL_BLOCKER=y 
 
-CONFIG_KSM=y
+CONFIG_KSM=n
 
-CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE=n
+
