--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-NamelessKernel[Treble]"
+CONFIG_LOCALVERSION="-CoffeeOC"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
@@ -90,6 +90,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=n
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=64
