Update kernel name and some others...
-set 300HZ instead of 100HZ(bad performance)
-add fastcharge line
-disable AIO hotplug
-disable Dynamic Fsync

--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-NamelessKernel[Treble]"
+CONFIG_LOCALVERSION="-CoffeeOC"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
@@ -52,7 +52,7 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=4
 CONFIG_PREEMPT=y
 CONFIG_TRANSPARENT_HUGEPAGE=n
-CONFIG_HZ_100=y
+CONFIG_HZ_300=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -89,7 +89,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=n
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
-CONFIG_CPU_BOOST=y
+CONFIG_CPU_BOOST=n
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=64
 CONFIG_INPUT_BOOST_FREQ_LP=844800
@@ -655,9 +655,9 @@ CONFIG_FORCE_FAST_CHARGE=y
 
 CONFIG_SOUND_CONTROL=y
 
-CONFIG_AiO_HotPlug=y
+CONFIG_AiO_HotPlug=n
 
-CONFIG_DYNAMIC_FSYNC=y
+CONFIG_DYNAMIC_FSYNC=n
 
 CONFIG_BOEFFLA_WL_BLOCKER=y 
 
@@ -701,6 +701,7 @@ CONFIG_ARM64_CPU_SUSPEND=y
 
 CONFIG_ASMP=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_FAST_CHARGE=y
 CONFIG_INTELLI_THERMAL=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
