--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -84,7 +84,6 @@ CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
-CONFIG_PM_WAKELOCKS_GC=y
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 CONFIG_PM_OPP=y
@@ -92,6 +91,8 @@ CONFIG_PM_CLK=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 CONFIG_CPU_IDLE=y
+# CONFIG_PM_WAKELOCKS_GC is not set
+# CONFIG_CPU_IDLE_GOV_LADDER is not set
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -101,7 +102,7 @@ CONFIG_CPU_FREQ_GOV_ELEMENTALX=n
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_DURATION_MS=64
-CONFIG_INPUT_BOOST_FREQ_LP=844800
+CONFIG_INPUT_BOOST_FREQ_LP=883200
 CONFIG_INPUT_BOOST_FREQ_PERF=480000
 # CONFIG_ARM64_ERRATUM_843419 is not set
 CONFIG_NET=y
