--- a/arch/arm64/configs/z2_plus_defconfig
+++ b/arch/arm64/configs/z2_plus_defconfig
@@ -43,7 +43,7 @@ CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_CFQ=y 
+CONFIG_DEFAULT_ZEN=y 
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_PCI_MSM=y
@@ -97,8 +97,8 @@ CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=n
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=n
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=n
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_INPUT_BOOST=y
